updatied for expires and persisitence